--- a/Curly/en.lproj/CurlyDocument.xib
+++ b/Curly/en.lproj/CurlyDocument.xib
@@ -68,7 +68,6 @@
 							<int key="NSvFlags">268</int>
 							<string key="NSFrame">{{49, 527}, {667, 22}}</string>
 							<reference key="NSSuperview" ref="568628114"/>
-							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="585235092"/>
 							<string key="NSReuseIdentifierKey">_NS:9</string>
 							<bool key="NSEnabled">YES</bool>
@@ -109,7 +108,6 @@
 							<int key="NSvFlags">268</int>
 							<string key="NSFrame">{{17, 530}, {27, 17}}</string>
 							<reference key="NSSuperview" ref="568628114"/>
-							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="888283195"/>
 							<string key="NSReuseIdentifierKey">_NS:1505</string>
 							<bool key="NSEnabled">YES</bool>
@@ -142,7 +140,6 @@
 							<int key="NSvFlags">268</int>
 							<string key="NSFrame">{{17, 22}, {56, 17}}</string>
 							<reference key="NSSuperview" ref="568628114"/>
-							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="789674301"/>
 							<string key="NSReuseIdentifierKey">_NS:1505</string>
 							<bool key="NSEnabled">YES</bool>
@@ -162,7 +159,6 @@
 							<int key="NSvFlags">268</int>
 							<string key="NSFrame">{{75, 16}, {100, 26}}</string>
 							<reference key="NSSuperview" ref="568628114"/>
-							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="173933683"/>
 							<string key="NSReuseIdentifierKey">_NS:9</string>
 							<bool key="NSEnabled">YES</bool>
@@ -236,8 +232,6 @@
 							<int key="NSvFlags">268</int>
 							<string key="NSFrame">{{664, 12}, {58, 32}}</string>
 							<reference key="NSSuperview" ref="568628114"/>
-							<reference key="NSWindow"/>
-							<reference key="NSNextKeyView"/>
 							<string key="NSReuseIdentifierKey">_NS:9</string>
 							<bool key="NSEnabled">YES</bool>
 							<object class="NSButtonCell" key="NSCell" id="428292783">
@@ -260,15 +254,14 @@
 							<int key="NSvFlags">12</int>
 							<string key="NSFrame">{{13, 68}, {710, 363}}</string>
 							<reference key="NSSuperview" ref="568628114"/>
-							<reference key="NSWindow"/>
-							<reference key="NSNextKeyView" ref="208842908"/>
+							<reference key="NSNextKeyView" ref="177000144"/>
 							<int key="NSViewLayerContentsRedrawPolicy">2</int>
 							<string key="NSReuseIdentifierKey">_NS:9</string>
 							<array class="NSMutableArray" key="NSTabViewItems">
 								<object class="NSTabViewItem" id="873356352">
 									<string key="NSIdentifier">1</string>
 									<object class="NSView" key="NSView" id="177000144">
-										<nil key="NSNextResponder"/>
+										<reference key="NSNextResponder" ref="585235092"/>
 										<int key="NSvFlags">256</int>
 										<array class="NSMutableArray" key="NSSubviews">
 											<object class="NSScrollView" id="607752393">
@@ -284,7 +277,7 @@
 																<int key="NSvFlags">2322</int>
 																<string key="NSFrameSize">{654, 14}</string>
 																<reference key="NSSuperview" ref="181339625"/>
-																<reference key="NSNextKeyView" ref="538339908"/>
+																<reference key="NSNextKeyView" ref="160798108"/>
 																<string key="NSReuseIdentifierKey">_NS:13</string>
 																<object class="NSTextContainer" key="NSTextContainer" id="492877429">
 																	<object class="NSLayoutManager" key="NSLayoutManager">
@@ -377,7 +370,7 @@
 														<int key="NSvFlags">256</int>
 														<string key="NSFrame">{{640, 1}, {15, 295}}</string>
 														<reference key="NSSuperview" ref="607752393"/>
-														<reference key="NSNextKeyView" ref="411470333"/>
+														<reference key="NSNextKeyView" ref="585235092"/>
 														<string key="NSReuseIdentifierKey">_NS:84</string>
 														<reference key="NSTarget" ref="607752393"/>
 														<string key="NSAction">_doScroller:</string>
@@ -400,7 +393,7 @@
 												</array>
 												<string key="NSFrame">{{17, 17}, {656, 297}}</string>
 												<reference key="NSSuperview" ref="177000144"/>
-												<reference key="NSNextKeyView" ref="181339625"/>
+												<reference key="NSNextKeyView" ref="538339908"/>
 												<string key="NSReuseIdentifierKey">_NS:9</string>
 												<int key="NSsFlags">133138</int>
 												<reference key="NSVScroller" ref="160798108"/>
@@ -409,6 +402,7 @@
 											</object>
 										</array>
 										<string key="NSFrame">{{10, 33}, {690, 317}}</string>
+										<reference key="NSSuperview" ref="585235092"/>
 										<reference key="NSNextKeyView" ref="607752393"/>
 										<string key="NSReuseIdentifierKey">_NS:11</string>
 									</object>
@@ -435,7 +429,7 @@
 																<int key="NSvFlags">2322</int>
 																<string key="NSFrameSize">{654, 14}</string>
 																<reference key="NSSuperview" ref="514378885"/>
-																<reference key="NSNextKeyView" ref="923734895"/>
+																<reference key="NSNextKeyView" ref="706416667"/>
 																<int key="NSViewLayerContentsRedrawPolicy">2</int>
 																<string key="NSReuseIdentifierKey">_NS:13</string>
 																<object class="NSTextContainer" key="NSTextContainer" id="1060049656">
@@ -511,7 +505,7 @@
 														<int key="NSvFlags">256</int>
 														<string key="NSFrame">{{640, 1}, {15, 295}}</string>
 														<reference key="NSSuperview" ref="905334264"/>
-														<reference key="NSNextKeyView" ref="411470333"/>
+														<reference key="NSNextKeyView" ref="585235092"/>
 														<string key="NSReuseIdentifierKey">_NS:84</string>
 														<reference key="NSTarget" ref="905334264"/>
 														<string key="NSAction">_doScroller:</string>
@@ -534,7 +528,7 @@
 												</array>
 												<string key="NSFrame">{{17, 17}, {656, 297}}</string>
 												<reference key="NSSuperview" ref="867718196"/>
-												<reference key="NSNextKeyView" ref="514378885"/>
+												<reference key="NSNextKeyView" ref="923734895"/>
 												<int key="NSViewLayerContentsRedrawPolicy">2</int>
 												<string key="NSReuseIdentifierKey">_NS:9</string>
 												<int key="NSsFlags">133138</int>
@@ -557,6 +551,7 @@
 										<nil key="NSNextResponder"/>
 										<int key="NSvFlags">256</int>
 										<string key="NSFrame">{{10, 33}, {690, 317}}</string>
+										<reference key="NSNextKeyView" ref="585235092"/>
 									</object>
 									<string key="NSLabel">Request Headers</string>
 									<reference key="NSColor" ref="916108222"/>
@@ -564,7 +559,7 @@
 								</object>
 								<object class="NSTabViewItem" id="174326738">
 									<object class="NSView" key="NSView" id="208842908">
-										<reference key="NSNextResponder" ref="585235092"/>
+										<nil key="NSNextResponder"/>
 										<int key="NSvFlags">256</int>
 										<array class="NSMutableArray" key="NSSubviews">
 											<object class="NSScrollView" id="826579236">
@@ -580,8 +575,7 @@
 																<int key="NSvFlags">256</int>
 																<string key="NSFrameSize">{654, 279}</string>
 																<reference key="NSSuperview" ref="301710061"/>
-																<reference key="NSWindow"/>
-																<reference key="NSNextKeyView" ref="410497644"/>
+																<reference key="NSNextKeyView" ref="238268416"/>
 																<string key="NSReuseIdentifierKey">_NS:13</string>
 																<bool key="NSEnabled">YES</bool>
 																<object class="NSTableHeaderView" key="NSHeaderView" id="1021734979">
@@ -589,7 +583,6 @@
 																	<int key="NSvFlags">256</int>
 																	<string key="NSFrameSize">{654, 17}</string>
 																	<reference key="NSSuperview" ref="238268416"/>
-																	<reference key="NSWindow"/>
 																	<reference key="NSNextKeyView" ref="301710061"/>
 																	<string key="NSReuseIdentifierKey">_NS:16</string>
 																	<reference key="NSTableView" ref="262015912"/>
@@ -700,7 +693,6 @@
 														</array>
 														<string key="NSFrame">{{1, 17}, {654, 279}}</string>
 														<reference key="NSSuperview" ref="826579236"/>
-														<reference key="NSWindow"/>
 														<reference key="NSNextKeyView" ref="262015912"/>
 														<string key="NSReuseIdentifierKey">_NS:11</string>
 														<reference key="NSDocView" ref="262015912"/>
@@ -712,7 +704,6 @@
 														<int key="NSvFlags">-2147483392</int>
 														<string key="NSFrame">{{224, 17}, {15, 102}}</string>
 														<reference key="NSSuperview" ref="826579236"/>
-														<reference key="NSWindow"/>
 														<reference key="NSNextKeyView" ref="416342097"/>
 														<string key="NSReuseIdentifierKey">_NS:58</string>
 														<reference key="NSTarget" ref="826579236"/>
@@ -725,7 +716,6 @@
 														<int key="NSvFlags">-2147483392</int>
 														<string key="NSFrame">{{1, 119}, {223, 15}}</string>
 														<reference key="NSSuperview" ref="826579236"/>
-														<reference key="NSWindow"/>
 														<reference key="NSNextKeyView" ref="411470333"/>
 														<string key="NSReuseIdentifierKey">_NS:60</string>
 														<int key="NSsFlags">1</int>
@@ -741,7 +731,6 @@
 														</array>
 														<string key="NSFrame">{{1, 0}, {654, 17}}</string>
 														<reference key="NSSuperview" ref="826579236"/>
-														<reference key="NSWindow"/>
 														<reference key="NSNextKeyView" ref="1021734979"/>
 														<string key="NSReuseIdentifierKey">_NS:15</string>
 														<reference key="NSDocView" ref="1021734979"/>
@@ -751,8 +740,7 @@
 												</array>
 												<string key="NSFrame">{{17, 17}, {656, 297}}</string>
 												<reference key="NSSuperview" ref="208842908"/>
-												<reference key="NSWindow"/>
-												<reference key="NSNextKeyView" ref="238268416"/>
+												<reference key="NSNextKeyView" ref="301710061"/>
 												<string key="NSReuseIdentifierKey">_NS:9</string>
 												<int key="NSsFlags">133682</int>
 												<reference key="NSVScroller" ref="410497644"/>
@@ -763,8 +751,6 @@
 											</object>
 										</array>
 										<string key="NSFrame">{{10, 33}, {690, 317}}</string>
-										<reference key="NSSuperview" ref="585235092"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="826579236"/>
 									</object>
 									<string key="NSLabel">Response Headers</string>
@@ -772,19 +758,18 @@
 									<reference key="NSTabView" ref="585235092"/>
 								</object>
 							</array>
-							<reference key="NSSelectedTabViewItem" ref="174326738"/>
+							<reference key="NSSelectedTabViewItem" ref="873356352"/>
 							<reference key="NSFont" ref="545174853"/>
 							<int key="NSTvFlags">0</int>
 							<bool key="NSAllowTruncatedLabels">YES</bool>
 							<bool key="NSDrawsBackground">YES</bool>
 							<array class="NSMutableArray" key="NSSubviews">
-								<reference ref="208842908"/>
+								<reference ref="177000144"/>
 							</array>
 						</object>
 					</array>
 					<string key="NSFrameSize">{736, 572}</string>
 					<reference key="NSSuperview"/>
-					<reference key="NSWindow"/>
 					<reference key="NSNextKeyView" ref="446196672"/>
 				</object>
 				<string key="NSScreenRect">{{0, 0}, {1440, 878}}</string>
@@ -1507,11 +1492,6 @@
 						<reference key="parent" ref="568628114"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">100276</int>
-						<reference key="object" ref="473251406"/>
-						<reference key="parent" ref="568628114"/>
-					</object>
-					<object class="IBObjectRecord">
 						<int key="objectID">100281</int>
 						<reference key="object" ref="620943384"/>
 						<reference key="parent" ref="568628114"/>
@@ -1609,21 +1589,6 @@
 					<object class="IBObjectRecord">
 						<int key="objectID">100337</int>
 						<reference key="object" ref="997115804"/>
-						<reference key="parent" ref="568628114"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">100338</int>
-						<reference key="object" ref="189393564"/>
-						<reference key="parent" ref="568628114"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">100339</int>
-						<reference key="object" ref="106798831"/>
-						<reference key="parent" ref="568628114"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">100340</int>
-						<reference key="object" ref="945878759"/>
 						<reference key="parent" ref="568628114"/>
 					</object>
 					<object class="IBObjectRecord">
@@ -1820,6 +1785,26 @@
 						<reference key="object" ref="30348856"/>
 						<reference key="parent" ref="0"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">100339</int>
+						<reference key="object" ref="106798831"/>
+						<reference key="parent" ref="568628114"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">100340</int>
+						<reference key="object" ref="945878759"/>
+						<reference key="parent" ref="568628114"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">100338</int>
+						<reference key="object" ref="189393564"/>
+						<reference key="parent" ref="568628114"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">100276</int>
+						<reference key="object" ref="473251406"/>
+						<reference key="parent" ref="568628114"/>
+					</object>
 				</array>
 			</object>
 			<dictionary class="NSMutableDictionary" key="flattenedProperties">
@@ -1952,86 +1937,9 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">100419</int>
+			<int key="maxID">100423</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">CurlyDocument</string>
-					<string key="superclassName">NSPersistentDocument</string>
-					<object class="NSMutableDictionary" key="actions">
-						<string key="NS.key.0">go:</string>
-						<string key="NS.object.0">NSButton</string>
-					</object>
-					<object class="NSMutableDictionary" key="actionInfosByName">
-						<string key="NS.key.0">go:</string>
-						<object class="IBActionInfo" key="NS.object.0">
-							<string key="name">go:</string>
-							<string key="candidateClassName">NSButton</string>
-						</object>
-					</object>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="headerTableDatasource">HeaderTableDatasource</string>
-						<string key="method">NSPopUpButton</string>
-						<string key="requestTextView">NSTextView</string>
-						<string key="responseHeadersView">NSTableView</string>
-						<string key="responseTab">NSTabViewItem</string>
-						<string key="responseTextView">NSTextView</string>
-						<string key="url">NSTextField</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="headerTableDatasource">
-							<string key="name">headerTableDatasource</string>
-							<string key="candidateClassName">HeaderTableDatasource</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="method">
-							<string key="name">method</string>
-							<string key="candidateClassName">NSPopUpButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="requestTextView">
-							<string key="name">requestTextView</string>
-							<string key="candidateClassName">NSTextView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="responseHeadersView">
-							<string key="name">responseHeadersView</string>
-							<string key="candidateClassName">NSTableView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="responseTab">
-							<string key="name">responseTab</string>
-							<string key="candidateClassName">NSTabViewItem</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="responseTextView">
-							<string key="name">responseTextView</string>
-							<string key="candidateClassName">NSTextView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="url">
-							<string key="name">url</string>
-							<string key="candidateClassName">NSTextField</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/CurlyDocument.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">HeaderTableDatasource</string>
-					<string key="superclassName">NSObject</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/HeaderTableDatasource.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">NSLayoutConstraint</string>
-					<string key="superclassName">NSObject</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/NSLayoutConstraint.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
